@@ -1,3 +1,13 @@
+2006-11-01    <drblast@users.sourceforge.net>
+
+	* Interpreter.cpp (execByteCode): Added OP_LINE, which draws lines.
+
+2006-10-31    <drblast@users.sourceforge.net>
+
+	* Interpreter.cpp (execByteCode): Added pause command
+
+	* BasicEdit.cpp (cursorMove): Added slot to calculate line number when the cursor moves, and display it on the status bar.
+
 2006-10-25    <drblast@users.sourceforge.net>
 
 	* Main.cpp (main): Added actions to edit menu.  Removed close button on output windows.
